5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1573_1331.log
== TEST (2019-03-11 15:27:46) 
-- CODE:
print(50 % 3)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:27:59) 
-- CODE:
print(50 % 3)
-- EXECUTION TIME:
0.12788
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:28:17) 
-- CODE:
print(50/3)
-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:29:02) 
-- CODE:
print(50//3)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:29:28) 
-- CODE:
print(50//3)
print(16 % 3)
-- OUTPUT:
16
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:29:35) 
-- CODE:
print(50//3)
print(16 % 4)
-- OUTPUT:
16
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:29:40) 
-- CODE:
print(50//3)
print(16 % 2)
-- OUTPUT:
16
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:29:45) 
-- CODE:
print(50//3)
print(16 % 1)
-- OUTPUT:
16
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:01) 
-- CODE:
print(50//3)
print(16 % 3)
-- OUTPUT:
16
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:18) 
-- CODE:
print(50//4)
print(16 % 3)
-- OUTPUT:
12
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:27) 
-- CODE:
print(50//4)
print(16 % 4)
-- OUTPUT:
12
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:30) 
-- CODE:
print(50//4)
print(16 % 5)
-- OUTPUT:
12
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:34) 
-- CODE:
print(50//4)
print(16 % 7)
-- OUTPUT:
12
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:37) 
-- CODE:
print(50//4)
print(16 % 9)
-- OUTPUT:
12
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:41) 
-- CODE:
print(50//4)
print(16 % 8)
-- OUTPUT:
12
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:47) 
-- CODE:
print(50//4)
print(16 % 1)
-- OUTPUT:
12
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:50) 
-- CODE:
print(50//4)
print(16 % 2)
-- OUTPUT:
12
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:52) 
-- CODE:
print(50//4)
print(16 % )
-- ERROR:
File "XXXX", line 2
    print(16 % )
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:54) 
-- CODE:
print(50//4)
print(16 % 3)
-- OUTPUT:
12
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:58) 
-- CODE:
print(50//4)
print(16 % 4)
-- OUTPUT:
12
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:00) 
-- CODE:
print(50//4)
print(16 % 5)
-- OUTPUT:
12
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:03) 
-- CODE:
print(50//4)
print(16 % 6)
-- OUTPUT:
12
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:07) 
-- CODE:
print(50//4)
print(16 % 7)
-- OUTPUT:
12
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:10) 
-- CODE:
print(50//4)
print(16 % 8)
-- OUTPUT:
12
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:12) 
-- CODE:
print(50//4)
print(16 % 9)
-- OUTPUT:
12
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:24) 
-- CODE:
print(50//4)
print(16 % 10)
-- OUTPUT:
12
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:38) 
-- CODE:
print(50//4)
print(12 % 10)
-- OUTPUT:
12
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:46) 
-- CODE:
print(50//4)
print(12 % 9)
-- OUTPUT:
12
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:31:50) 
-- CODE:
print(50//4)
print(12 % 9)
-- EXECUTION TIME:
0.172232
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:32:03) 
-- CODE:
print(50//3)
print(12 % 9)
-- OUTPUT:
16
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:32:26) 
-- CODE:
print(50//4)
print(12 % 9)
-- OUTPUT:
12
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:47) 
-- CODE:
print(50//4)
print(12 % 9)
-- EXECUTION TIME:
0.166335
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:05) 
-- CODE:
print(50//5)
print(12 % 9)
-- OUTPUT:
10
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:09) 
-- CODE:
print(50//9)
print(12 % 9)
-- OUTPUT:
5
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:18) 
-- CODE:
print(50//12)
print(12 % 9)
-- OUTPUT:
4
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:24) 
-- CODE:
print(50//4)
print(12 % 9)
-- OUTPUT:
12
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:52) 
-- CODE:
print(50//4)
print(12 % 9)
-- EXECUTION TIME:
0.196981
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:53) 
-- CODE:
print(50//4)
print(12 % 9)
-- OUTPUT:
12
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:41:48) 
-- CODE:
print(50//3)
print(12 % 9)
-- OUTPUT:
16
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:03:55) 
-- CODE:
print(50//3)
print(12 % 9)
-- OUTPUT:
16
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:04:23) 
-- CODE:
print(50//4)
print(12 % 9)
-- OUTPUT:
12
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:04:27) 
-- CODE:
print(50//4)
print(12 % 9)
-- EXECUTION TIME:
0.150884
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 04:57:52) 
-- CODE:
print(50//4)
print(12 % 9)
-- OUTPUT:
12
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 04:57:59) 
-- CODE:
print(50//4)
print(12 % 9)
-- EXECUTION TIME:
0.123203
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:21:59) 
-- CODE:
print(50//3)
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:22:01) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.207362
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
